Update Code for Reproducibility Simulation and Figure Technometrics_EntireScen1.Rmd

--- a/Code for Reproducibility Simulation and Figure Technometrics_EntireScen1.Rmd
+++ b/Code for Reproducibility Simulation and Figure Technometrics_EntireScen1.Rmd
@@ -10,28 +10,18 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-**Please open this file from the working directory of "Code for Technometrics Reproducibility".**
-
 ```{r}
+setwd("/workspaces/virtual-machine-cellGMM")
 rm(list = ls())
 ```
 
 Install the packages if necessary (uncomment the following lines).
 
 ```{r}
-# install.packages("MASS")
-# install.packages("pracma")
-# install.packages("purrr")
-# install.packages("mvnfast")
-# install.packages("cellWise")
-# install.packages("mclust")
-# install.packages("tclust")
-# install.packages("remotes")
-# remotes::install_version("snipEM", version = "1.0.1", upgrade = "never")
-# install.packages("MixtureMissing")
-# install.packages("doParallel")
-# install.packages("parallel")
-# install.packages("foreach")
+install.packages("cellWise")
+install.packages("tclust")
+remotes::install_version("snipEM", version = "1.0.1", upgrade = "never")
+install.packages("MixtureMissing")
 ```
 
 Load the packages.
@@ -259,8 +249,7 @@ internal.cellGMM <- function(X, G, Ug, Permut, tuningp, maxfact, rndstart){
 }
 
 result.cellGMM <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.cellGMM <- foreach (i = 1:nsample, .packages = c("MASS", "tclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.cellGMM(Xout[[i]], G, Uth, Permut, tuning_param_init, maxfact, rndstart)         
@@ -321,8 +310,7 @@ for (i in 1:nsample) {
 }
 
 result.cellGMM.penopt <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.cellGMM.penopt <- foreach (i = 1:nsample, .packages = c("MASS", "tclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.cellGMM.penopt(Xout[[i]], G, penalty[[i]], result.cellGMM[[i]]$init, Uth, Permut, tuning_param_init, maxfact, rndstart)
@@ -366,8 +354,7 @@ internal.tclust <- function(X, G, Ug, Permut, maxfact){
 }
 
 result.tclust <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.tclust <- foreach (i = 1:nsample, .packages = c("tclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.tclust(Xout[[i]], G, Uth, Permut, maxfact)
@@ -432,8 +419,7 @@ internal.sclust.25 <- function(X, G, Ug, Permut, maxfact){
 }
 
 result.sclust.25 <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.sclust.25 <- foreach (i = 1:nsample, .packages = c("snipEM", "purrr", "tclust"), .errorhandling = "pass") %dopar% {
   internal.sclust.25(Xout[[i]], G, Uth, Permut, maxfact)       
@@ -474,8 +460,7 @@ internal.MNM <- function(X, G, Ug, Permut){
 }
 
 result.MNM <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.MNM <- foreach (i = 1:nsample, .packages = c("MixtureMissing", "mclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.MNM(Xout[[i]], G, Uth, Permut)      
@@ -538,8 +523,7 @@ internal.MCNM <- function(X, G, Ug, Permut){
 }
 
 result.MCNM <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.MCNM <- foreach (i = 1:nsample, .packages = c("MixtureMissing", "mclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.MCNM(Xout[[i]], G, Uth, Permut)      
@@ -601,8 +585,7 @@ internal.MtM <- function(X, G, Ug, Permut){
 }
 
 result.MtM <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.MtM <- foreach (i = 1:nsample, .packages = c("MixtureMissing", "mclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.MtM(Xout[[i]], G, Uth, Permut)  
@@ -624,8 +607,7 @@ cellMCD (Raymaekers and Rousseeuw, 2023) [R package: cellWise]
 
 ```{r}
 result.cellMCD <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.cellMCD <- foreach (i = 1:nsample, .packages = c("cellWise"), .errorhandling = "pass") %dopar% {
   cellMCD(Xout[[i]], alpha = 0.50, crit = 1e-6, noCits = 500, checkPars = list(coreOnly = TRUE, numDiscrete = 0))       
@@ -642,8 +624,7 @@ DI (Raymaekers and Rousseeuw, 2021) [R package: cellWise]
 
 ```{r}
 result.DI <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.DI <- foreach (i = 1:nsample, .packages = c("cellWise"), .errorhandling = "pass") %dopar% {
   DI(Xout[[i]], crit = 1e-6, maxits = 500, checkPars = list(coreOnly = TRUE, numDiscrete = 0))
@@ -912,8 +893,7 @@ cellGMM with no penalty (cellGMM.pen0)
 
 ```{r}
 result.cellGMM <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.cellGMM <- foreach (i = 1:nsample, .packages = c("MASS", "tclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.cellGMM(Xout[[i]], G, Uth, Permut, tuning_param_init, maxfact, rndstart)         
@@ -945,8 +925,7 @@ for (i in 1:nsample) {
 }
 
 result.cellGMM.penopt <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.cellGMM.penopt <- foreach (i = 1:nsample, .packages = c("MASS", "tclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.cellGMM.penopt(Xout[[i]], G, penalty[[i]], result.cellGMM[[i]]$init, Uth, Permut, tuning_param_init, maxfact, rndstart)
@@ -966,8 +945,7 @@ TCLUST (Garcia et al, 2008) [R package: tclust]
 
 ```{r}
 result.tclust <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.tclust <- foreach (i = 1:nsample, .packages = c("tclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.tclust(Xout[[i]], G, Uth, Permut, maxfact)
@@ -989,8 +967,7 @@ $25\%$ as snipping/trimming level.
 
 ```{r}
 result.sclust.25 <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.sclust.25 <- foreach (i = 1:nsample, .packages = c("snipEM", "purrr", "tclust"), .errorhandling = "pass") %dopar% {
   internal.sclust.25(Xout[[i]], G, Uth, Permut, maxfact)       
@@ -1051,8 +1028,7 @@ internal.sclust <- function(X, G, Ug, Permut, maxfact){
 }
 
 result.sclust <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.sclust <- foreach (i = 1:nsample, .packages = c("snipEM", "purrr", "tclust"), .errorhandling = "pass") %dopar% {
   internal.sclust(Xout[[i]], G, Uth, Permut, maxfact)       
@@ -1070,8 +1046,7 @@ MNM (Multivariate Normal Mixture) [R package: MixtureMissing]
 
 ```{r}
 result.MNM <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.MNM <- foreach (i = 1:nsample, .packages = c("MixtureMissing", "mclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.MNM(Xout[[i]], G, Uth, Permut)      
@@ -1089,8 +1064,7 @@ MCNM (Tong and Tortora, 2022) [R package: MixtureMissing]
 
 ```{r}
 result.MCNM <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.MCNM <- foreach (i = 1:nsample, .packages = c("MixtureMissing", "mclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.MCNM(Xout[[i]], G, Uth, Permut)      
@@ -1110,8 +1084,7 @@ MtM (Wang et al, 2004) [R package: MixtureMissing]
 
 ```{r}
 result.MtM <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.MtM <- foreach (i = 1:nsample, .packages = c("MixtureMissing", "mclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.MtM(Xout[[i]], G, Uth, Permut)  
@@ -1133,8 +1106,7 @@ cellMCD (Raymaekers and Rousseeuw, 2023) [R package: cellWise]
 
 ```{r}
 result.cellMCD <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.cellMCD <- foreach (i = 1:nsample, .packages = c("cellWise"), .errorhandling = "pass") %dopar% {
   cellMCD(Xout[[i]], alpha = 0.50, crit = 1e-6, noCits = 500, checkPars = list(coreOnly = TRUE, numDiscrete = 0))       
@@ -1151,8 +1123,7 @@ DI (Raymaekers and Rousseeuw, 2021) [R package: cellWise]
 
 ```{r}
 result.DI <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.DI <- foreach (i = 1:nsample, .packages = c("cellWise"), .errorhandling = "pass") %dopar% {
   DI(Xout[[i]], crit = 1e-6, maxits = 500, checkPars = list(coreOnly = TRUE, numDiscrete = 0))
@@ -1444,8 +1415,7 @@ cellGMM with no penalty (cellGMM.pen0)
 
 ```{r}
 result.cellGMM <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.cellGMM <- foreach (i = 1:nsample, .packages = c("MASS", "tclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.cellGMM(Xout[[i]], G, Uth, Permut, tuning_param_init, maxfact, rndstart)         
@@ -1477,8 +1447,7 @@ for (i in 1:nsample) {
 }
 
 result.cellGMM.penopt <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.cellGMM.penopt <- foreach (i = 1:nsample, .packages = c("MASS", "tclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.cellGMM.penopt(Xout[[i]], G, penalty[[i]], result.cellGMM[[i]]$init, Uth, Permut, tuning_param_init, maxfact, rndstart)
@@ -1498,8 +1467,7 @@ TCLUST (Garcia et al, 2008) [R package: tclust]
 
 ```{r}
 result.tclust <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.tclust <- foreach (i = 1:nsample, .packages = c("tclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.tclust(Xout[[i]], G, Uth, Permut, maxfact)
@@ -1521,8 +1489,7 @@ $25\%$ as snipping/trimming level.
 
 ```{r}
 result.sclust.25 <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.sclust.25 <- foreach (i = 1:nsample, .packages = c("snipEM", "purrr", "tclust"), .errorhandling = "pass") %dopar% {
   internal.sclust.25(Xout[[i]], G, Uth, Permut, maxfact)       
@@ -1583,8 +1550,7 @@ internal.sclust <- function(X, G, Ug, Permut, maxfact){
 }
 
 result.sclust <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.sclust <- foreach (i = 1:nsample, .packages = c("snipEM", "purrr", "tclust"), .errorhandling = "pass") %dopar% {
   internal.sclust(Xout[[i]], G, Uth, Permut, maxfact)       
@@ -1602,8 +1568,7 @@ MNM (Multivariate Normal Mixture) [R package: MixtureMissing]
 
 ```{r}
 result.MNM <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.MNM <- foreach (i = 1:nsample, .packages = c("MixtureMissing", "mclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.MNM(Xout[[i]], G, Uth, Permut)      
@@ -1621,8 +1586,7 @@ MCNM (Tong and Tortora, 2022) [R package: MixtureMissing]
 
 ```{r}
 result.MCNM <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.MCNM <- foreach (i = 1:nsample, .packages = c("MixtureMissing", "mclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.MCNM(Xout[[i]], G, Uth, Permut)      
@@ -1642,8 +1606,7 @@ MtM (Wang et al, 2004) [R package: MixtureMissing]
 
 ```{r}
 result.MtM <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.MtM <- foreach (i = 1:nsample, .packages = c("MixtureMissing", "mclust", "purrr"), .errorhandling = "pass") %dopar% {
   internal.MtM(Xout[[i]], G, Uth, Permut)  
@@ -1665,8 +1628,7 @@ cellMCD (Raymaekers and Rousseeuw, 2023) [R package: cellWise]
 
 ```{r}
 result.cellMCD <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.cellMCD <- foreach (i = 1:nsample, .packages = c("cellWise"), .errorhandling = "pass") %dopar% {
   cellMCD(Xout[[i]], alpha = 0.50, crit = 1e-6, noCits = 500, checkPars = list(coreOnly = TRUE, numDiscrete = 0))       
@@ -1683,8 +1645,7 @@ DI (Raymaekers and Rousseeuw, 2021) [R package: cellWise]
 
 ```{r}
 result.DI <- vector(mode = "list", length = nsample)
-ncores <- detectCores()
-cl <- makeCluster(ncores - 2)
+cl <- makeCluster(4)
 registerDoParallel(cl)
 result.DI <- foreach (i = 1:nsample, .packages = c("cellWise"), .errorhandling = "pass") %dopar% {
   DI(Xout[[i]], crit = 1e-6, maxits = 500, checkPars = list(coreOnly = TRUE, numDiscrete = 0))
