--- a/Code for Reproducibility Simulation and Figure Technometrics_EntireScen1.Rmd
+++ b/Code for Reproducibility Simulation and Figure Technometrics_EntireScen1.Rmd
@@ -21,7 +21,7 @@ Install the packages if necessary (uncomment the following lines).
 install.packages("cellWise")
 install.packages("tclust")
 remotes::install_version("snipEM", version = "1.0.1", upgrade = "never")
-install.packages("MixtureMissing")
+remotes::install_version("MixtureMissing", version = "1.0.2", upgrade = "never")
 ```
 
 Load the packages.
@@ -1867,9 +1867,9 @@ FIGURE [Figures 1 (Scenario 1) and Figure 2 (Scenario 1) - Main Article]
 Prepare first the object for ggplot.
 
 ```{r}
-# install.packages("ggplot2")
-# install.packages("tidyr")
-# install.packages("dplyr")
+install.packages("ggplot2")
+install.packages("tidyr")
+install.packages("dplyr")
 library(ggplot2)
 library(tidyr)
 library(dplyr)
